deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shiny-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shiny-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: shiny-app
    spec:
      containers:
        - name: shiny-app
          image: docker.io/ericlong07/shiny-app:first
          ports:
            - containerPort: 3838
          resources:
            limits:
              cpu: "1"
              memory: "1Gi"
            requests:
              cpu: "0.5"
              memory: "512Mi"
