service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shiny-app-service
spec:
  selector:
    app: shiny-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3838
  type: LoadBalancer
